<resources>
    <string name="app_name">Schedule Planner</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="schedule_planner">Schedule Planner</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="notes">Notes</string>
    <string name="past_schedules">Past Schedules</string>
    <string name="about_app">About &#38; Help/Support </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="backup">Backup</string>
    <string name="settings">Settings</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="register_your_details">Register Your Details</string>
    <string name="register">Register</string>
    <string name="confirm">CONFIRM</string>
    <string name="change_password">Change Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? Register Now</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="logo">Logo</string>
    <string name="change">Change</string>
    <string name="enter_the_otp">Enter The OTP</string>
    <string name="otp">OTP</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="email">Email</string>
    <string name="verify_your_mail">Verify Your Mail</string>
    <string name="verify_email">Verify Email</string>
    <string name="verified_email">Verified Email</string>
    <string name="verify">Verify</string>
    <string name="dummy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="schedule_description">The schedule here is basically the collection of daily tasks. A schedule has specific date, schedule title, daily notes and set of tasks with specific time.\nTo create a schedule you just have to go to Home fragment and there click on the Plus(+) floating button on the bottom right corner. Then Create Schedule page get open, exactly from here you can create your schedule.\n\nBy clicking the date button you can select your schedule date from calendar\nBy Clicking on the notes icon on the top right corner you can write notes\nBy clicking on the title input you can give a title to your schedule\nFinally to add tasks you can simply click on the pencil icon on the bottom right corner\n\nAfter you made your schedule you can save it by clicking on the tick icon on bottom right corner of Create Schedule page or you can simply press back once then the schedule will get updated automatically.</string>
    <string name="tasks_description">To create task you have to mention the specified time of the task, so that we can notify you at exact time about your task, and you can enter title and description of the task. After making task you have to click on the tick button to save your task, after clicking your task and reminder of that task will be registered.\n\n Note: You can also create multiple tasks of same time.</string>
    <string name="notes_description">The notes is an additional feature where you can write about your day and save it to a schedule. After saving the schedule you can access your notes in Notes fragment listed in the app drawer.</string>
    <string name="repeating_task_description">The repeating task is the task that repeats daily at a specific time. It\'s interface is same like normal task interface which have time, title, description.\n\nTo create repeating task, Directly go to the home fragment then click on the repeat icon just above the plus icon on bottom right corner of the page, After clicking on the repeat icon you will reach at Daily Repeating Task page and from there you can create a repeating task which will repeat daily at specific time.\nThe repeating tasks will appear on the home fragment (below today tasks section) in a horizontal scrolling box.</string>
    <string name="other_description">The schedule planner app is well organized, here the home page is divided into three components.\n\nToday\'s Schedule- Here the today\'s schedule will be fetched automatically (if you have added it before) and all today\'s task will get listed in this component will the analytics of how much tasks you have completed. To delete the schedule there is a small delete icon after Edit Schedule on the right corner is given from here you can directly delete today\'s complete schedule. To edit anything there is a Edit Schedule button is given just below the analytics on the right corner by clicking on it you can edit the schedule and after saving the analytics will get updated automatically.\n\nRepeating Tasks- Here all the repeating tasks will appear in a horizontal scroll box. You can directly edit and delete the repeating tasks by clicking on the icons accordingly.\n\nSchedules After Date- Here all schedule after today will get listed (if you have created) with the date,day, title and small view of all the tasks. You can edit and delete the schedules by clicking on the icons give on the schedule accordingly.\n\nPast Schedule Fragment- To access schedules before today you can go to the app drawer and click on the past schedule fragment and there all the schedules before today will get appeared. Editing and Deleting schedules is same as in the Schedules After Today section in the Home fragment.</string>
    <string name="app_description">Schedule Planner is an android application which provides peoples an efficient way to schedule their tasks with specific time and reminder.\nIn this app user can plan their upcoming schedules with specific tasks, daily notes and many other features and tools. This application is designed simple with eye catchy design for best user experience. It provides amazing features for planning daily schedules so that the user will never forget their tasks to complete within specified time.</string>
    <string name="faqAnswer3">You cannot directly make today\'s task done from home fragment, to do it you have to click on edit schedule button in today tasks component then you can make task done and then after saving it, it will automatically get updated in the home fragment.</string>
    <string name="faqAnswer2">The repeating task is inside a horizontal scroll box, so if you will scroll horizontally all other repeated tasks will be also visible.</string>
    <string name="faqAnswer1">The main reason is if you restart your device after creating task then all the reminder alarm will get canceled.\n\nYou have to make copy of each tasks to get reminder and you can delete previous ones.</string>
</resources>