<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Login"
    android:background="#000000">

    <ImageView
        android:id="@+id/robo"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/robo"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/robo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#E66DF3F8"
        android:text="@string/login_to_your_account"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/box"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@+id/login"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/google"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:clickable="true"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:src="@drawable/google"
        android:contentDescription="@string/google_sign_in"
        android:focusable="true" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/box"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/or"
        android:textColor="#E66DF3F8"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/or"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="#E6FFFFFF"
        android:drawableStart="@drawable/actionbar_email"
        android:drawablePadding="5dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="#97000000"
        android:textSize="20dp"
        tools:ignore="RtlSymmetry"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/email"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="#E6FFFFFF"
        android:drawableStart="@drawable/actionbar_password"
        android:drawablePadding="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="15"
        android:paddingStart="10dp"
        android:textColor="#000000"
        android:textColorHint="#97000000"
        android:textSize="20dp"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="150dp"
        android:layout_height="46dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="#0055FF"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password"
        android:textColor="#E6FFFFFF"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="15dp"
        android:text="@string/don_t_have_an_account_register_now"
        android:textAlignment="center"
        android:textColor="#E6FFFFFF"
        android:textSize="15dp" />


</RelativeLayout>