<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Schedule Planner"
        android:textSize="20dp"
        android:textColor="@color/white"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text1"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:lineSpacingExtra="1dp"
            android:text="@string/app_description"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:text="Features &#38; How to Use:"
            android:textColor="#03A9F4"
            android:textSize="15dp" />

    <TextView
        android:id="@+id/feature1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/text2"
        android:text="1) Schedule:"
        android:textSize="12dp"
        android:textColor="#FF5722"/>

        <TextView
            android:id="@+id/description1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/feature1"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:lineSpacingExtra="1dp"
            android:text="@string/schedule_description"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/feature2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@id/description1"
            android:text="2) Tasks:"
            android:textSize="12dp"
            android:textColor="#FF5722"/>

        <TextView
            android:id="@+id/description2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/feature2"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:lineSpacingExtra="1dp"
            android:text="@string/tasks_description"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/feature3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@id/description2"
            android:text="3) Notes:"
            android:textSize="12dp"
            android:textColor="#FF5722"/>

        <TextView
            android:id="@+id/description3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/feature3"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:lineSpacingExtra="1dp"
            android:text="@string/notes_description"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/feature4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@id/description3"
            android:text="4) Repeating Tasks:"
            android:textSize="12dp"
            android:textColor="#FF5722"/>

        <TextView
            android:id="@+id/description4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/feature4"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:lineSpacingExtra="1dp"
            android:text="@string/repeating_task_description"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/feature5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@id/description4"
            android:text="5) Others:"
            android:textSize="12dp"
            android:textColor="#FF5722"/>

        <TextView
            android:id="@+id/description5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/feature5"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:lineSpacingExtra="1dp"
            android:text="@string/other_description"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description5"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:text="FAQ's (Frequently Asked Questions):"
            android:textColor="#03A9F4"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/faq1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@id/text3"
            android:text="1) Reminder/Notification alerts not showing:"
            android:textSize="12dp"
            android:textColor="#FF5722"/>

        <TextView
            android:id="@+id/answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/faq1"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="0dp"
            android:lineSpacingExtra="1dp"
            android:text="@string/faqAnswer1"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/faq2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/answer1"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="2) Only one repeating task is visible:"
            android:textColor="#FF5722"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/answer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/faq2"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="0dp"
            android:lineSpacingExtra="1dp"
            android:text="@string/faqAnswer2"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/faq3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@id/answer2"
            android:text="3) Cannot able to make today's task done:"
            android:textSize="12dp"
            android:textColor="#FF5722"/>

        <TextView
            android:id="@+id/answer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/faq3"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="0dp"
            android:lineSpacingExtra="1dp"
            android:text="@string/faqAnswer3"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="10dp" />

        <Button
            android:id="@+id/contactButton"
            android:layout_width="160dp"
            android:layout_height="30dp"
            android:background="@drawable/main_shape"
            android:backgroundTint="#03A9F4"
            android:text="Contact Support"
            android:textSize="15dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/answer3"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="50dp"/>

    </RelativeLayout>

</ScrollView>